[gd_scene load_steps=4 format=2]

[ext_resource path="res://project/entities/EntityBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://project/graphics/tileset.png" type="Texture" id=2]
[ext_resource path="res://project/entities/other entities/RunningHorse.gd" type="Script" id=3]

[node name="RunningHorse" instance=ExtResource( 1 )]
script = ExtResource( 3 )
hp_max = 1
hp = 1
DEATH_SOUND = null
HIT_SCENE = null

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 240, 48, 16, 16 )

[node name="CollisionShape2D" parent="PickupArea" index="0"]
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="9"]

[node name="AllowFreeTimer" type="Timer" parent="." index="10"]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Hurtbox"]
[editable path="PickupArea"]
